<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/login_Title"
        android:text="@string/login_Title"
        app:layout_constraintBottom_toTopOf="@+id/email_Label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/app_Title" />

    <TextView
        android:id="@+id/email_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/email_Label"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/password_Label"
        app:layout_constraintEnd_toStartOf="@+id/email_Input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email_Input"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/email_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/email_Hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password_Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/email_Label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/password_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_Label"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/password_Input"
        app:layout_constraintEnd_toStartOf="@+id/password_Input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_Label" />

    <EditText
        android:id="@+id/password_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/password_Hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/password_Label"
        app:layout_constraintTop_toBottomOf="@+id/email_Input" />

    <Button
        android:id="@+id/newLogin_Buttton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/newLogin_Button"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/existingLogin_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_Input"
        app:layout_constraintVertical_bias="0.26999998"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/existingLogin_Button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/existingAcct_Button"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newLogin_Buttton" />

</androidx.constraintlayout.widget.ConstraintLayout>